--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -6,7 +6,44 @@
 }
 
 body {
+    background: linear-gradient(120deg, #5DE0E6, #004AAD);
     font-family: 'Poppins',sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 100vh;
     width: 100vw;
+}
+
+.clock {
+    background: transparent;
+    box-shadow: 0px 8px 10px rgba(0, 0, 0, .5);
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 200px;
+    width: 550px;
+}
+
+.body {
+    border-radius: 5px;
+    background: #ffffff;
+    box-shadow: inset 35px 35px 100px #dfdede,
+            inset -35px -35px 100px #9c9b9b;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 170px;
+    width: 150px;
+}
+
+.body span {
+    color: #3a3737;
+    font-size: 60px;
+    letter-spacing: 5px;
+}
+
+.body span.info {
+    font-size: 14px;
 }
